--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -25,17 +25,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Vista.MenuActivityAdmin">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-
-        <activity
-            android:name=".Vista.MenuActivityAdmin">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-
         <activity android:name=".Vista.MenuActivityAnalista" />
         <activity android:name=".Vista.AgregarTareas" />
         <activity android:name=".Vista.MenuTareas" />
@@ -57,7 +53,8 @@
         <activity android:name=".Vista.AgregarProyecto" />
         <activity android:name=".Vista.EditarProyecto" />
         <activity android:name=".Vista.EliminarProyecto" />
-        <activity android:name=".Vista.GenerarMuestreo"></activity>
+        <activity android:name=".Vista.GenerarMuestreo" />
+        <activity android:name=".Vista.TomarMuestra"></activity>
     </application>
 
 </manifest>
